# vabot

./: .env.example  .gitignore  cert.pem  key.pem  pyproject.toml  response.html
src/: main.py
src/vabot/: base.py  bot.py  chatbot.py  config.py  debug.py
